--- a/app.css
+++ b/app.css
@@ -123,7 +123,7 @@ header{
     color: #fff;
 }
 .--button-org{
-    background-color: #E3A300;
+    background-color: #f9c309;
     color: #fff;
 }
 
